# lamina-os

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  COMMUNITY_ANNOUNCEMENT_DRAFT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_INSTRUCTIONS_v0.2.0.md  SECURITY.md  SIGIL_VALIDATION_REPORT.md  SUPPORT.md  adr_timing_data.json  coverage-lamina-core.xml  coverage-lamina-llm-serve.xml  docker-compose.test.yml  mkdocs.yml  pyproject.toml  requirements-test.txt  sigil_comprehension_simulated_llm_1748564689.json  sigil_comprehension_test_results.json  sigil_comprehension_test_results_lamina_llm_1748564812.json  sigils.yaml  test-coverage-report.md  token_reduction_measurements.json
.github/: LUTHIER_GUIDE.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  philosophy_discussion.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  terraform-drift.yml
build-env/: Dockerfile  Dockerfile.fast  Dockerfile.secure  Makefile  Makefile.fast  README.md
docker/: base-images.md
docs/: .pages  AI_ASSISTANT_USAGE.md  CI_VERIFICATION_PROTOCOL.md  HIGH_COUNCIL_CONSCIOUSNESS_TERMINOLOGY_REVIEW.md  HIGH_COUNCIL_REPORT_DYNAMIC_PROMPT_COMPOSITION.md  HIGH_COUNCIL_TECHNICAL_REPORT_2025-01-06.md  INFRASTRUCTURE_PROPOSAL.md  LORE_ADAPTATIONS.md  PERSONAL_RELEASE_NOTE_v0.2.0.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v1.0.0_HIGH_COUNCIL_REVIEW.md  RELEASE_NOTES_v1.0.2.md  ROADMAP.md  TESTING.md  adr-tracking-metadata.md  architecture-vision.md  current-capabilities-backup.md  current-capabilities.md  framework-vs-implementation.md  getting-started.md  index.md  infrastructure-release-guide.md  luthier-git-attribution-guide.md  luthier-philosophy.md  philosophy.md  sigil-script-grimoire.md  time-tracking-template.md
docs/adrs/: 0001-establish-adr-policy.md  0002-monorepo-architecture-for-public-framework.md  0003-open-source-implementation-roadmap.md  0004-documentation-strategy-for-conscious-community.md  0005-luther-is-promoted.md  0006-conscious-release-process.md  0007-lamina-core-terminology-framework.md  0008-symbolic-claude-memory-language.md  0009-ai-human-pr-collaboration-workflow.md  0010-comprehensive-testing-strategy.md  0011-three-tier-environment-management.md  0012-cli-tool-architecture-and-responsibilities.md  0013-luthier-workshop-establishment.md  0014-force-push-author-correction.md  0015-training-lamina-aligned-model.md  0016-adr-template-enforcement.md  0017-high-council-pr-review-protocol.md  0018-yanked-v1.0.0-reset-to-0.2.0.md  0019-agent-architecture-foundation.md  0020-dynamic-prompt-composition-sanctuary-system.md  0020-lamina-deployment-environment-architecture.md  0021-infrastructure-distribution-strategy.md  0022-sanctuary-cluster-visualization-architecture.md  README.md  template.md
docs/archive/: RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md
docs/environments/: README.md
docs/guides/: CI_VERIFICATION_PROTOCOL.md  getting-started.md  github-workflow-guide.md  luthier-git-attribution-guide.md
docs/luthier/: philosophy.md  workshop-guide.md
docs/philosophy/: framework-vs-implementation.md  luthier-philosophy.md  sigil-script-grimoire.md
docs/pir/: PIR-2025-01-06-ruff-linting-failures.md
docs/technical/: SECRETS_INVENTORY.md  UV_DEPENDENCY_ANALYSIS.md  architecture-vision.md
environments/: README.md
environments/development/: config.yaml
examples/: README.md  basic_agent.py  current_capabilities_demo.py  debug_full_routing.py  debug_routing.py  model_serving.py  multi_agent_coordination.py  test_creative_routing.py  working_coordination_demo.py
infrastructure/: README.md  istio-gateway-config.yaml  istio-hostname-routing.yaml
scripts/: audit-secrets.sh  auto-fix.sh  check-build-fast.sh  check-build.sh  release.py  security-check.sh  setup-luthier-git.sh  validate-links.py
terraform/: .gitignore  README.md  backend.tf  import.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tools/: adr_timing_analysis.py  breath_check.py  cleanup-test-llm.sh  demo-sigil-comprehension-results.py  docker-compose.test-llm.yml  generate-all-sigil-companions.py  measure-token-reduction.py  setup-test-llm.sh  sigil-tools.py  test-sigil-comprehension.py
(+191 files in other folders)
